# sales-forecasting-system

./: .gitignore  DEMO.md  Dockerfile  PROJECT_REPORT.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
docs/: make_figures.py
docs/figures/mermaid/: diagram_1.mmd  diagram_10.mmd  diagram_11.mmd  diagram_12.mmd  diagram_13.mmd  diagram_14.mmd  diagram_15.mmd  diagram_16.mmd  diagram_17.mmd  diagram_18.mmd  diagram_2.mmd  diagram_3.mmd  diagram_4.mmd  diagram_5.mmd  diagram_6.mmd  diagram_7.mmd  diagram_8.mmd  diagram_9.mmd
src/sales_forecast/: __init__.py
src/sales_forecast/api/: app.py  cli.py  report.py  schemas.py  service.py
src/sales_forecast/config/: settings.py
src/sales_forecast/data/: __init__.py  loader.py  preprocessor.py  splits.py
src/sales_forecast/evaluation/: __init__.py  explain.py  metrics.py
src/sales_forecast/features/: engineer.py
src/sales_forecast/models/: __init__.py  arima_model.py  base.py  conformal.py  ensemble.py  global_lstm.py  lstm_model.py  prophet_model.py  registry.py  sarima_model.py  stacking.py  xgboost_model.py
src/sales_forecast/training/: __init__.py  cli.py  pipeline.py
src/sales_forecast/utils/: __init__.py  drift.py  io.py  logging.py  seed.py  versioning.py
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_features.py  test_metrics_drift.py  test_models.py
